<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13sp"
                android:text="@string/s7"
                android:textColor="#000000"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/fet" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="13sp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/wc2"
                    android:textColor="#000000" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="13dp"
                android:layout_marginTop="20dp"
                android:text="@string/f1"
                android:textColor="#000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="13sp"
                android:layout_marginTop="20dp"
                android:text="@string/f2"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/oc1" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="13sp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/f3"
                    android:textColor="#000000" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/oc2" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="13sp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/f4"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/fet" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="13sp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/wt8"
                    android:textColor="#000000" />

            </LinearLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>
