<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#9b9b9b"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boto1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#0000ff"
            android:text="@string/not"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="17sp" />

        <Button
            android:id="@+id/boto2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#ff6f00"
            android:text="@string/parts"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <Button
            android:id="@+id/boto3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#04ff00"
            android:text="Tutorial"
            android:textAllCaps="false"
            android:textSize="16sp"

            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="#9b9b9b"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/boto5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#04ff00"
            android:text="@string/ca"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:layout_margin="6dp">





        </LinearLayout>



        <Button
            android:id="@+id/boto7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#f7ff00"
            android:text="@string/Crono"
            android:textSize="16sp"
            android:textAllCaps="false"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#9b9b9b"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boto4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#ff0000"
            android:text="@string/mjoc"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:background="#04ff00"
            android:entries="@array/languages"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/boto6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#0000ff"
            android:text="@string/re1"
            android:textAllCaps="false"
            android:textColor="#ffffff"/>


    </LinearLayout>


</LinearLayout>