<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/edges"
            android:textSize="40sp"
            android:textColor="#000000"
            android:layout_margin="13sp"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="fitXY"
                android:src="@drawable/parts3" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/corners"
                android:textSize="40sp"
                android:textColor="#000000"
                android:layout_margin="13sp"/>


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="fitXY"
                android:src="@drawable/parts1" />


            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/centers"
                android:textSize="40sp"
                android:textColor="#000000"
                android:layout_margin="13sp"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="fitXY"
                android:src="@drawable/parts2" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/centers2"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_margin="13dp"/>




        </LinearLayout>

    </ScrollView>


</LinearLayout>