<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s3"
                android:textSize="30sp"
                android:textColor="#000000"
                android:layout_margin="13sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/arestes4"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/wc2"
                    android:layout_marginLeft="20dp"
                    android:textColor="#000000"
                    android:layout_marginRight="13sp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/e7"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:layout_margin="13sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/arestes5"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/e2"
                    android:layout_marginLeft="20dp"
                    android:textColor="#000000"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/arestes3"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/e3"
                    android:layout_marginLeft="20dp"
                    android:textColor="#000000"
                    android:layout_marginRight="13sp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/e6"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:layout_margin="13sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="1)"
                    android:textAlignment="center"
                    android:textSize="40sp"
                    android:layout_marginLeft="13sp"/>

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/arestes1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/e4"
                    android:layout_marginLeft="20dp"
                    android:textColor="#000000"
                    android:layout_marginRight="13sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="2)"
                    android:textAlignment="center"
                    android:textSize="40sp"
                    android:layout_marginLeft="13sp"/>

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/arestes2"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/e5"
                    android:layout_marginLeft="20dp"
                    android:textColor="#000000"
                    android:layout_marginRight="13sp"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/arestes4"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/wt8"
                    android:layout_marginLeft="20dp"
                    android:textColor="#000000"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
