<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s4"
                android:textSize="30sp"
                android:textColor="#000000"
                android:layout_margin="13sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/oa4"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/wc2"
                    android:layout_marginLeft="20dp"
                    android:textColor="#000000"
                    android:layout_marginRight="13sp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/g5"
                android:layout_marginTop="20dp"
                android:textColor="#000000"
                android:layout_margin="13sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/oa1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/g2"
                    android:layout_marginLeft="20dp"
                    android:textColor="#000000"
                    android:layout_marginRight="13sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/oa2"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/g3"
                    android:layout_marginLeft="20dp"
                    android:textColor="#000000"
                    android:layout_marginRight="13sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/oa3"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/g4"
                    android:layout_marginLeft="20dp"
                    android:textColor="#000000"
                    android:layout_marginRight="13sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/oa4"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/wt8"
                    android:layout_marginLeft="20dp"
                    android:textColor="#000000"/>
            </LinearLayout>






        </LinearLayout>
    </ScrollView>
</LinearLayout>
